--- a/_posts/2012-03-06-123.md
+++ b/_posts/2012-03-06-123.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: "123"
-category: 
-tags: []
+category: test
+tags: [test]
 ---
 {% include JB/setup %}
 sadjisadsuhagduachghaguysdgagiusgautduyqgshxbasgx
